--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply scroll-pt-16 scroll-smooth;
+  }
   body {
     @apply flex min-h-screen flex-col bg-white text-slate-500 antialiased dark:bg-slate-900 dark:text-slate-400;
   }
